<resources>
    <string name="app_name">Reflect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="records">Записи</string>
    <string name="statistic">Статистика</string>
    <string name="friends">Друзья</string>
    <string name="profile">Профиль</string>
    <string name="toolbarRecordsTitle">Записи</string>
    <string name="toolbarStatisticTitle">Статистика</string>
    <string name="toolbarFriendsTitle">Друзья</string>
    <string name="toolbarSearchFriendsTitle">Найти друга</string>
    <string name="toolbarNotificationFriendsTitle">Уведомления</string>
    <string name="contentDescriptionToolbarStreakIcon">Иконка стрика</string>
    <string name="contentDescriptionToolbarSearchIcon">Иконка поиска</string>
    <string name="contentDescriptionToolbarSettingsIcon">Иконка настроек</string>
    <string name="contentDescriptionAddStateBackArrow">Иконка закрытия окна добавления состояния</string>
    <string name="contentDescriptionAddStateImage">Картинка с выбранным состоянием</string>
    <string name="contentDescriptionFragmentProfileIcon">Пустая иконка профиля</string>
    <string name="contentDescriptionFragmentProfileIconChange">Иконка редактирования иконки профиля</string>
    <string name="contentDescriptionRecordsFragmentChevronLeft">Кнопка выбора даты на день назад</string>
    <string name="contentDescriptionRecordsFragmentChevronRight">Кнопка выбора даты на день вперёд</string>
    <string name="contentDescriptionCardStateImage">Иконка, показывающая состояние</string>
    <string name="contentDescriptionCardStateChangeDots">Иконка, при нажатии показывающая выпадающее меню</string>
    <string name="contentDescriptionFragmentStatisticExportDataIcon">Иконка для экспорта статистики в excel</string>
    <string name="contentDescriptionAIFragmentBackArrow">Иконка возврата на главный экран</string>
    <string name="contentDescriptionAIFragmentExpandMenu">Кнопка раскрытия и скрытия запросов-помощников</string>
    <string name="contentDescriptionAIFragmentButtonSend">Кнопки отправки запросы к ИИ</string>
    <string name="contentDescriptionFragmentToolbarNotificationIcon">Иконка уведомлений</string>
    <string name="contentDescriptionFragmentToolbarBackIcon">Иконка возврата на предыдущий экран</string>
    <string name="contentDescriptionCardFriendPremiumIcon">Иконка премиума у пользователя</string>
    <string name="contentDescriptionFragmentPremiumToolbarBackArrow">Иконка возврата на экран профиля</string>
    <string name="contentDescriptionFragmentPremiumCatImage">Картинка котика Купите премиум пж</string>
    <string name="contentDescriptionPopupStreak">Картинка котика на стрике</string>
    <string name="contentDescriptionWidgetStateImage">Иконка состояния на виджете</string>
    <string name="contentDescriptionFragmentWidgetBackArrow">Иконка возврата на экран профиля</string>
    <string name="contentDescriptionStreakPreview1">Превью стрика, когда записей нет</string>
    <string name="contentDescriptionStreakPreview2">Превью стрика, когда записей меньше 7</string>
    <string name="contentDescriptionStreakPreview3">Превью стрика, когда записей больше 7</string>
    <string name="contentDescriptionStatePreview1">Превью стрика, когда состояние ужасное</string>
    <string name="contentDescriptionStatePreview2">Превью стрика, когда состояние плохое</string>
    <string name="contentDescriptionStatePreview3">Превью стрика, когда состояние нормальное</string>
    <string name="contentDescriptionStatePreview4">Превью стрика, когда состояние хорошее</string>
    <string name="contentDescriptionStatePreview5">Превью стрика, когда состояние замечательное</string>
    <string name="contentDescriptionStatePreview6">Превью стрика, когда пользователь не отметил запись состояния</string>
    <string name="contentDescriptionFragmentProfileUserBackArrow">Иконка воврата на экран друзей</string>
    <string name="contentDescriptionFragmentProfileUserMoreDots">Иконка дополнительного меню во фрагменте профиля пользователя</string>
    <string name="contentDescriptionFragmentFriendsToolbarNotificationIconBadge">Бэйдж уведомлений</string>
    <string name="loginTitle">Вход</string>
    <string name="loginEmailHint">Почта</string>
    <string name="loginPasswordHint">Пароль</string>
    <string name="loginButton">Войти</string>
    <string name="loginOr">или</string>
    <string name="loginLikeGuest">Войти как гость</string>
    <string name="loginRegistration">Регистрация</string>
    <string name="loginForgotPassword">Забыли пароль?</string>
    <string name="registrationIconBackContentDescription">Иконка возврата на экран авторизации</string>
    <string name="registrationIcon">Регистрация</string>
    <string name="registrationLoginHint">Логин</string>
    <string name="registrationEmailHint">Почта</string>
    <string name="registrationPasswordHint">Пароль</string>
    <string name="registrationPasswordConfirmationHint">Повторите пароль</string>
    <string name="registrationButton">Зарегистрироваться</string>
    <string name="registrationOr">или</string>
    <string name="emptyFieldsErrorMessage">Заполните все поля</string>
    <string name="inequalityFieldsErrorMessage">Пароли не совпадают</string>
    <string name="equalityFieldsErrorMessage">Пароли не должны совпадать</string>
    <string name="resetPasswordCodePinErrorMessage">Неверный код</string>
    <string name="passwordInSixSymbolsErrorMessage">Пароль должен быть от 6 символов</string>
    <string name="incorrectEmailErrorMessage">Введена неккоректная электронная почта</string>
    <string name="resetPasswordTitle">Восстановить пароль</string>
    <string name="resetPasswordEmailTitle">Введите почту, на которую придёт код для восстановления пароля</string>
    <string name="sendCodeButtonText">Отправить код</string>
    <string name="resetPasswordCodeTitle">На почту %1$s отправлен код подтверждения</string>
    <string name="resetPasswordSendCodeAgain">Отправить код через %1$s</string>
    <string name="resetPasswordSendCodeAgainWithoutTimer">Отправить код повторно</string>
    <string name="resetPasswordSendCodeButtonText">Подтвердить</string>
    <string name="resetPasswordNewPasswordConfirmationHint">Подтвердите пароль</string>
    <string name="newPasswordHint">Новый пароль</string>
    <string name="makeNewPassword">Придумайте новый пароль для входа в аккаунт</string>
    <string name="agreementDialogTitle">Согласие на обработку персональных данных</string>
    <string name="agreementDialogDescription">Подтверждая, вы даете согласие на обработку персональных данных</string>
    <string name="agreementButtonText">Согласен/а</string>
    <string name="disagreementButtonText">Не согласен/а</string>
    <string name="addStateHowDoYouFeel">Как ты себя чувствуешь?</string>
    <string name="addStateBadMood">Ужасно</string>
    <string name="addStateGoodMood">Замечательно</string>
    <string name="addStateClarifyButtonText">Уточнить</string>
    <string name="addStateSaveWithoutClarifyButtonText">Сохранить без подробностей</string>
    <string name="addStateFirstClarificationHowDoYouFeel">Что тебя заставляет так себя чувствовать?</string>
    <string name="addStateContinueButtonText">Продолжить</string>
    <string name="addStateSecondClarificationHowDoYouFeel">Как ты себя чувствуешь?</string>
    <string name="addStateThirdClarificationHowDoYouFeel">Как ты себя чувствуешь?</string>
    <string name="addStateThirdClarificationEditTextHint">Добавить заметку…</string>
    <string name="addStateSaveButtonText">Сохранить</string>
    <string name="emptyRecordsText">Записей нет</string>
    <string name="fragmentProfilePremiumButton">Премиум</string>
    <string name="fragmentProfileLoginButton">Войти в аккаунт</string>
    <string name="fragmentProfileRegistrationButton">Зарегистрироваться</string>
    <string name="fragmentProfileLogoutButton">Выйти из аккаунта</string>
    <string name="fragmentProfileWidgetButton">Виджеты</string>
    <string name="dialogLogoutTitle">Подтверждение выхода</string>
    <string name="dialogLogoutMiddleText">Вы действительно хотите выйти? Все несохраненные данные будут потеряны.</string>
    <string name="dialogLogoutBackButton">Назад</string>
    <string name="dialogLogoutLogoutButton">Выйти</string>
    <string name="cardStateMood">%1$s настроение</string>
    <string name="cardMenuEdit">Редактировать</string>
    <string name="cardMenuDelete">Удалить</string>
    <string name="awfulState">Ужасное</string>
    <string name="badState">Плохое</string>
    <string name="normalState">Нормальное</string>
    <string name="goodState">Хорошее</string>
    <string name="excellentState">Отличное</string>
    <string name="addStateToastMessage">Запись успешно создана</string>
    <string name="welcomeToastMessage">Добро пожаловать!</string>
    <string name="successfulRegistrationToastMessage">Регистрация прошла успешно</string>
    <string name="loadingToastMessage">Пожалуйста, подождите</string>
    <string name="editStateToastMessage">Запись успешно обновлена</string>
    <string name="deleteStateToastMessage">Запись успешно удалена</string>
    <string name="errorToastMessage">Произошла ошибка</string>
    <string name="toastErrorConnectionMessage">Ошибка подключения к интернету</string>
    <string name="selectDate">Выберите дату</string>
    <string name="cardStatisticTagTV">%1$d раз(а)</string>
    <string name="fragmentWidgetToolbarTitle">Виджеты</string>
    <string name="fragmentWidgetStreakButton">Стрик пользователя</string>
    <string name="fragmentWidgetStateButton">Эмоциональное состояние</string>
    <string name="dialogSendReportTitle">Подача жалобы</string>
    <string name="dialogSendReportDescription">Выберите причину подачу жалобы на пользователя <b>%1$s</b></string>
    <string name="dialogSendReportRadioProfileReport">Неприемлемое имя пользователя</string>
    <string name="dialogSendReportRadioStateReport">Неприемлимое описаное карточки состояния</string>
    <string name="dialogSendReportButton">Отправить жалобу</string>
    <string name="dialogSendReportBack">Назад</string>
    <string name="dialogBewareAITitle"><b>Важная информация</b></string>
    <string name="dialogBewareAIDescriptionTitle">ИИ - не замена психологу</string>
    <string name="dialogBewareAIDescriptionDeluxe">Он может давать общие советы, но не обладает профессиональным образованием, опытом и не учитывает вашу уникальную ситуацию. Его ответы — лишь информация, а не диагноз или терапия.</string>
    <string name="dialogBewareAIDescriptionFirstL">- Всегда консультируйтесь с реальным специалистом перед важными решениями о психическом здоровье.</string>
    <string name="dialogBewareAIDescriptionSecondL">- Не полагайтесь слепо на ИИ — он не чувствует, не сопереживает и, также как и администрация, не несёт ответственности за последствия.</string>
    <string name="dialogBewareAIDescriptionFooter"><b>Ваше благополучие важнее всего!</b></string>
    <string name="dialogBewareAIButton">ОК</string>
    <string name="fragmentRulesTitle">Правила</string>
    <string name="fragmentRulesDescriptionTitle"><b><u>Правила поведения в приложении:</u></b></string>
    <string name="fragmentRulesDescriptionFooter"><b>(Правила могут дополняться. Использование приложения означает согласие с ними.)</b></string>
    <string name="fragmentRulesDescriptionBody">\nЗапрещено:\n - Оскорбления\n - Дискриминация и любые формы ненависти\n - Обсуждение и пропаганда политических взглядов, партий\n - Призывы к агрессии, терроризму, а также любые формы угроз\n - Контент 18+ (включая текст, изображения, видео и намёки)\n - Публикация приватной информации (своей или других пользователей)\n - Спам и реклама – только с разрешения администрации\n - Нарушители блокируются без предупреждения\n</string>
</resources>