<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/records"
        android:title="@string/records"
        android:icon="@drawable/ic_bottom_navbar_records"/>

    <item
        android:id="@+id/statistic"
        android:title="@string/statistic"
        android:icon="@drawable/ic_bottom_navbar_statistic"
        />

    <item
        android:id="@+id/add_record"
        android:title=""
        android:icon="@drawable/ic_bottom_navbar_add"
        />

    <item
        android:id="@+id/friends"
        android:title="@string/friends"
        android:icon="@drawable/ic_bottom_navbar_friends"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_bottom_navbar_profile"/>
</menu>