<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.widget.fragment.WidgetFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragmentWidgetToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/mainFragmentViewPagerToolbarMarginHorizontal_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragmentWidgetToolbarTitle"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentWidgetToolbarTitle"
            android:layout_gravity="center"
            android:textColor="@color/onSurface"
            />

        <ImageButton
            android:id="@+id/fragmentWidgetToolbarBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/rounded_surface_ripple"
            android:contentDescription="@string/contentDescriptionFragmentWidgetBackArrow"
            android:src="@drawable/ic_back_arrow" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/fragmentWidgetToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragmentStatisticToggleGroupMarginHorizontal_11dp"
        app:singleSelection="true"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/fragmentWidgetToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragmentWidgetStreakButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_weight="1"
            android:text="@string/fragmentWidgetStreakButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragmentWidgetStateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_weight="1"
            android:text="@string/fragmentWidgetStateButton"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragmentWidgetScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_scroll_view_widget"
        android:layout_marginVertical="@dimen/fragmentWidgetScrollViewMarginVertical_29dp"
        android:layout_marginHorizontal="@dimen/fragmentWidgetScrollViewMarginHorizontal_25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentWidgetToggleGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:gravity="center_horizontal"
            >

            <LinearLayout
                android:id="@+id/fragmentWidgetStreakLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:visibility="gone"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_streak_preview_2"
                    android:contentDescription="@string/contentDescriptionStreakPreview1"
                    android:layout_marginTop="@dimen/fragmentWidgetScrollableImageFirstMarginTop_20dp"
                    android:layout_marginBottom="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_streak_preview_1"
                    android:contentDescription="@string/contentDescriptionStreakPreview2"
                    android:layout_marginVertical="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_streak_preview_3"
                    android:contentDescription="@string/contentDescriptionStreakPreview3"
                    android:layout_marginTop="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    android:layout_marginBottom="@dimen/fragmentWidgetScrollableImageLastMarginBottom_20dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragmentWidgetStateLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_state_preview_1"
                    android:contentDescription="@string/contentDescriptionStatePreview1"
                    android:layout_marginTop="@dimen/fragmentWidgetScrollableImageFirstMarginTop_20dp"
                    android:layout_marginBottom="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_state_preview_2"
                    android:contentDescription="@string/contentDescriptionStatePreview2"
                    android:layout_marginVertical="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_state_preview_3"
                    android:contentDescription="@string/contentDescriptionStatePreview3"
                    android:layout_marginVertical="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_state_preview_4"
                    android:contentDescription="@string/contentDescriptionStatePreview4"
                    android:layout_marginVertical="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_state_preview_5"
                    android:contentDescription="@string/contentDescriptionStatePreview5"
                    android:layout_marginVertical="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_widget_state_preview_6"
                    android:contentDescription="@string/contentDescriptionStatePreview6"
                    android:layout_marginTop="@dimen/fragmentWidgetScrollableImageMarginVertical_10dp"
                    android:layout_marginBottom="@dimen/fragmentWidgetScrollableImageLastMarginBottom_20dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>