<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/surfaceContainerLow"
    app:cardCornerRadius="@dimen/dialogCardCornerRadius_12dp"
    android:background="@color/surfaceContainerLow"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dialogLinearLayoutPaddingVertical_12dp"
        android:paddingHorizontal="@dimen/dialogLinearLayoutPaddingHorizontal_8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogSendReportTitle"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/onSurfaceVariant"
            android:layout_marginHorizontal="@dimen/dialogMarginHorizontal_8dp"
            />

        <TextView
            android:id="@+id/dialogSendReportDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogSendReportDescription"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/onSurfaceVariant"
            android:layout_marginVertical="@dimen/dialogMarginVertical_8dp"
            android:layout_marginHorizontal="@dimen/dialogMarginHorizontal_8dp"
            />

        <RadioGroup
            android:id="@+id/dialogSendReportRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/dialogSendReportRadioProfileReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogSendReportRadioProfileReport"
                android:textColor="@color/onSurface"
                />

            <RadioButton
                android:id="@+id/dialogSendReportRadioStateReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogSendReportRadioStateReport"
                android:textColor="@color/onSurface"
                />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dialogSendReportButtonMarginTop_4dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialogSendReportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialogButtonMarginStart_8dp"
                style="@style/Widget.Material3.CardView.Elevated"
                android:text="@string/dialogSendReportButton"
                android:elevation="@dimen/dialogButtonElevation_3dp"
                android:textColor="@color/error"
                app:backgroundTint="@color/backgroundColorDialogButton"
                app:cornerRadius="@dimen/dialogButtonCornerRadius_100dp"
                />

            <Button
                android:id="@+id/dialogBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/dialogSendReportBack"
                android:textColor="@color/tertiary"
                />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>